--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <label class="label">
                               <span class="label-text">PIN</span>
                             </label>
-                            <input type="password" placeholder="Enter Your PIN" class="input input-bordered" required />
+                            <input id="password" type="password" placeholder="Enter Your PIN" class="input input-bordered" required />
                             <label class="label">
                               <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
                             </label>
